import 'package:expense_manager/translation/keyword.dart';

const Map<String, String> en = {
  KeyWork.spentThisWeek: 'Spent this week',
  KeyWork.today: 'Today',
  KeyWork.food: 'Food',
  KeyWork.totalSpent: 'Total spent',
  KeyWork.thisWeek: 'This week',
  KeyWork.week: 'Week',
  KeyWork.month: 'Month',
  KeyWork.year: 'Year',
  KeyWork.mon: 'Mon',
...
  KeyWork.cancel: 'Cancel',
  KeyWork.expense: 'Expense',
  KeyWork.income: 'Income',
  KeyWork.enterNote: 'Enter Note',
  KeyWork.cash: 'Cash',
  KeyWork.card: 'Card',
  KeyWork.save: 'Save',
  KeyWork.breakfash: 'Breakfash',
  KeyWork.lunch: 'Lunch',
  KeyWork.dinner: 'Dinner',
  KeyWork.drink: 'Drink',
  KeyWork.bike: 'Bike',
  KeyWork.gas: 'Gas',
...
