...
              mainAxisAlignment: MainAxisAlignment.end,
              children: [
                Center(
                  child: IntrinsicWidth(
                    child: _MoneyTextField(
                      controller: controller,
                      key: const Key('moneyTextField'),
                    ),
                  ),
                ),
                SizedBox(height: 20.h),
                Padding(
                  padding: const EdgeInsets.symmetric(horizontal: 10),
                  child: IntrinsicWidth(
                    child: TextField(
                      controller: noteController,
                      key: const Key('noteTextField'),
                      style: TextStyleUtils.regular(24),
                      decoration: InputDecoration(
                        hintText: KeyWork.enterNote.tr,
                        hintStyle: TextStyleUtils.regular(24),
                        isDense: true,
                      ),
...
