...
          //       }
          //       return CircularProgressIndicator();
          //     },
          //   ),
          // ),
          floatingActionButton: FloatingActionButton(
            key: const Key('addNewTransaction'),
            onPressed: () {
              // showModalBottomSheet(
              //   context: context,
              //   builder: (context) {
              //     return const AddNewTransactionScreen();
              //   },
...
